RESOLVED FIXED75654
Text fields should draw using NSTextFieldCell instead of WebKitSystemInterface
https://bugs.webkit.org/show_bug.cgi?id=75654
Summary Text fields should draw using NSTextFieldCell instead of WebKitSystemInterface
Beth Dakin
Reported 2012-01-05 15:16:42 PST
Text fields should be converted to draw via NSCell like other form controls.
Attachments
Patch (3.51 KB, patch)
2012-01-05 15:20 PST, Beth Dakin
sullivan: review+
Beth Dakin
Comment 1 2012-01-05 15:20:34 PST
Beth Dakin
Comment 2 2012-01-05 16:31:12 PST
Thanks John! Committed change with revision 104240.
Ryosuke Niwa
Comment 3 2012-01-09 21:35:03 PST
fyi, chromium reverted this change: http://trac.webkit.org/changeset/104494
Alexey Proskuryakov
Comment 4 2012-05-14 15:31:20 PDT
This was <rdar://problem/10582064>. > fyi, chromium reverted this change: http://trac.webkit.org/changeset/104494 I think that a regression was fixed later as <http://trac.webkit.org/changeset/110480>.
Note You need to log in before you can comment on or make changes to this bug.