https://bugs.webkit.org/show_bug.cgi?id=75654 Text fields should draw using NSTextFieldCell instead of WebKitSystemInterface

Reviewed by John Sullivan.

This change should not have any affect on tests or real web sites. It just changed
the implementation under the hood to the more modern NSCell approach.
* rendering/RenderThemeMac.h:
* rendering/RenderThemeMac.mm:
(WebCore::RenderThemeMac::paintTextField):
(WebCore::RenderThemeMac::textField):



Canonical link: https://commits.webkit.org/92458@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104240 268f45cc-cd09-0410-ab3c-d52691b4dbfc